# 2022_MATDAQ

./: LICENSE  README.md  docker-compose.yml  dump.rdb
.github/workflows/: go.yml  rust.yml
api/: Makefile  go.mod
api/matching-engine/: matchingEngine.pb.go  matchingEngine.proto  matchingEngine_grpc.pb.go
api/user-service/: userService.pb.go  userService.proto  userService_grpc.pb.go
client/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
client/cmd/price-display/: main.go
client/cmd/request-creator/: main.go  server.go
client/cmd/request-creator-server/: main.go
client/internal/xml-schemas/: new-order-single.xml
client/pkg/: README.md
client/pkg/new-order-single/: ManualOrdIndReq.go  MessageHeader.go  NewOrderSingle.go  OrderTypeReq.go  SbeMarshalling.go  Side.go  TimeInForce.go
client/pkg/xml-schemas/: new-order-single.xml
dev/: README.md  setup.sh
dev/git_hooks/: commit-msg  commit_message_format.py  pre-commit
matching-engine/: Cargo.toml  Dockerfile  README.md  build.rs
matching-engine/src/: client.rs  main.rs  matching_engine.rs  server.rs  user_service.rs
matching-engine/src/limit_order_book/: limit_order_book.rs  limit_order_book_manager.rs  mod.rs  order.rs  order_side.rs  order_type.rs  request_handlers.rs  trade.rs
net/: Makefile  README.md  go.mod  go.sum
net/cmd/reqrep/: main.go
net/cmd/reqres/: main.go
net/pkg/reqrep/: client.go  common.go  server.go
pkg/: README.md
user-service/: .gitignore  Makefile  README.md  dump.rdb  go.mod  go.sum
user-service/internal/: controllers.go  models.go
(+21 files in other folders)
